--- a/apps/base/immich/overlays/tombstone/kustomization.yaml
+++ b/apps/base/immich/overlays/tombstone/kustomization.yaml
@@ -16,6 +16,9 @@ patches:
       name: immich-server
   - patch: |-
       - op: add
+        path: /metadata/annotations/traefik.ingress.kubernetes.io~1router.middlewares
+        value: traefik-ip-allowlist-internal@kubernetescrd
+      - op: add
         path: /spec/hostnames
         value:
           - immich.home.arpa
