--- a/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
+++ b/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
@@ -4,6 +4,42 @@ kind: ClusterIssuer
 metadata:
   annotations:
     argocd.argoproj.io/sync-options: ServerSideApply=true
+  name: letsencrypt-production
+spec:
+  acme:
+    email: certificates@osborn.io
+    preferredChain: ""
+    privateKeySecretRef:
+      name: letsencrypt-production
+    server: https://acme-v02.api.letsencrypt.org/directory
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: traefik
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
+  name: letsencrypt-staging
+spec:
+  acme:
+    email: certificates@osborn.io
+    preferredChain: ""
+    privateKeySecretRef:
+      name: letsencrypt-staging
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: traefik
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
   name: selfsigned
 spec:
   selfSigned: {}
