--- a/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
+++ b/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
@@ -40,6 +40,16 @@ kind: ClusterIssuer
 metadata:
   annotations:
     argocd.argoproj.io/sync-options: ServerSideApply=true
+  name: ownca
+spec:
+  ca:
+    secretName: ownca-intermediate-ca
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
   name: selfsigned
 spec:
   selfSigned: {}
