--- a/apps/base/domain-redirects/base/resources/deployment.yaml
+++ b/apps/base/domain-redirects/base/resources/deployment.yaml
@@ -2,6 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    reloader.stakater.com/auto: !!str true
   name: domain-redirects
   namespace: domain-redirects
 spec:
