mTLS for vaultwarden

--- a/apps/vaultwarden/base/configs/vaultwarden.env
+++ b/apps/vaultwarden/base/configs/vaultwarden.env
@@ -21,6 +21,7 @@ PASSWORD_HINTS_ALLOWED=false
 REQUIRE_DEVICE_EMAIL=false
 ROCKET_ADDRESS=0.0.0.0
 ROCKET_PORT=8080
+ROCKET_TLS={certs="/tls/tls.crt",key="/tls/tls.key"}
 ROCKET_WORKERS=10
 SENDS_ALLOWED=true
 SHOW_PASSWORD_HINT=false
