--- a/apps/vaultwarden/base/resources/service.yaml
+++ b/apps/vaultwarden/base/resources/service.yaml
@@ -11,8 +11,8 @@ metadata:
 spec:
   ipFamilyPolicy: SingleStack
   ports:
-    - name: http
-      port: 80
+    - name: https
+      port: 443
       protocol: TCP
       targetPort: 8080
   selector:
