--- a/apps/vaultwarden/base/resources/deployment.yaml
+++ b/apps/vaultwarden/base/resources/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    secret.reloader.stakater.com/reload: vaultwarden
+    secret.reloader.stakater.com/reload: vaultwarden,vaultwarden-tls
   labels:
     app.kubernetes.io/component: vaultwarden
     app.kubernetes.io/instance: vaultwarden
@@ -38,7 +38,8 @@ spec:
             failureThreshold: 10
             httpGet:
               path: /alive
-              port: http
+              port: https
+              scheme: HTTPS
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
@@ -46,13 +47,14 @@ spec:
           name: vaultwarden
           ports:
             - containerPort: 8080
-              name: http
+              name: https
               protocol: TCP
           readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /alive
-              port: http
+              port: https
+              scheme: HTTPS
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
@@ -66,10 +68,13 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
           volumeMounts:
-            - name: data
-              mountPath: /data
-            - name: data-tmp
-              mountPath: /data/tmp
+            - mountPath: /data
+              name: data
+            - mountPath: /data/tmp
+              name: data-tmp
+            - mountPath: /tls
+              name: tls
+              readOnly: true
       securityContext:
         seccompProfile:
           type: RuntimeDefault
@@ -83,3 +88,6 @@ spec:
           emptyDir:
             medium: Memory
             # sizeLimit: ...
+        - name: tls
+          secret:
+            secretName: vaultwarden-tls
