--- a/apps/vaultwarden/base/resources/ingress.yaml
+++ b/apps/vaultwarden/base/resources/ingress.yaml
@@ -11,6 +11,6 @@ spec:
               service:
                 name: vaultwarden
                 port:
-                  name: http
+                  name: https
             path: /
             pathType: Prefix
