--- a/apps/gitea/overlays/tombstone/kustomization.yaml
+++ b/apps/gitea/overlays/tombstone/kustomization.yaml
@@ -27,5 +27,5 @@ patches:
         path: /spec/template/spec/securityContext/runAsUser
         value: 987
     target:
-      kind: Deployment
+      kind: StatefulSet
       name: gitea
