--- a/apps/nextcloud/overlays/tombstone/resources/sopssecret.yaml
+++ b/apps/nextcloud/overlays/tombstone/resources/sopssecret.yaml
@@ -9,6 +9,9 @@ spec:
       stringData:
         nextcloud-password: ENC[AES256_GCM,data:a4IqTCCIzrURC1szy7aQng==,iv:eqETFT3jNEqcuAa6R8TIhBJnFPweKme9uYFxf74r7wo=,tag:DEf+bFoFE2V5Pcmnd3pkXg==,type:str]
         nextcloud-username: ENC[AES256_GCM,data:F9iXPiI=,iv:T0ggocry1/xhWpzacTZv5x3AZZ0P4w9ktJkNQr6fLo0=,tag:JDldkuMeq/ve2h3kOFVMZA==,type:str]
+    - name: ENC[AES256_GCM,data:pn7qxO5wQq/0Bs0CL24AyKdG,iv:Gppzu2+vGp4/Bz6ki0/R7JPraNITJLp1Y/+tmXMxFlU=,tag:gJY0jWvHzxfH19JPyMvACA==,type:str]
+      stringData:
+        postgres-password: ENC[AES256_GCM,data:DXIQYc82hkx6Y0ecAFsOkA==,iv:8zLvOalFbuzhqB3CbMzBRzvLGTIg5j8BmxjRYXh0JUQ=,tag:wAypub3L4QecGSS4yetglA==,type:str]
     - name: ENC[AES256_GCM,data:RHcjIb2q4qlkBYmCdQCJ,iv:2gsy24ZTnrdY8ItSVEG7mPScOCkylW8OThNtVk7/K+8=,tag:2H8QEDR5Cp/KOJURSN0WLQ==,type:str]
       stringData:
         password: ENC[AES256_GCM,data:SdjZiXkr9k5f2mZ09lJtPQ==,iv:0wVDo1YGyELUlDklVUrJ+n4TNT+eZdr/5ss2/dxFXuo=,tag:NFdhI2NyLJPgpoHEpFqMoQ==,type:str]
@@ -23,7 +26,7 @@ sops:
         Q3hkWWxCRVAyVk1nMG5xSUZSY1VSSEkK+eZLm4F5wsLanRRW2s0dbSsKi6118Q00
         9iK+vb+VbYhSZwDQ9NVfrPsYL4METmnqLhzmQIfF8Q+1JuiHoEzRTQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-07T00:21:58Z"
-  mac: ENC[AES256_GCM,data:XOtfF4eooHGFKUljwf2tnTNJBxbuc52eh4neLBAtj8eL2SDbpYot4K4aw9+fYLShr+LB7BM87LggMPcznw+HQHaqP1nCr6247wFI9Wd0ZrPBNUTJPRpJh3riDSkh3bzOC/kVP/Ve+WfPzLHGpgzKjrWRKw4qDs5OlVdUeJ5KKL4=,iv:Q3maDv6/DTxvi/pZ/2fKwZgREVB3vVfRIURKBmESNrM=,tag:aovUGXD5nKpm5pfNoJ+PfQ==,type:str]
+  lastmodified: "2026-02-08T00:44:58Z"
+  mac: ENC[AES256_GCM,data:nJUsdl5wug1l6iiVYO/fgIc+YQMYqan2Smk6e2eB1i2Xp2g0F8PdqKfUF5nInHDt+ft65Xd7OdvWy4OlAllzCoaq0vy+DjbyYx5WAhguxKk0g+qN66K4SwaNVSttGF7Jvfm+Uc2CkS2pEaNc923D9TSUyP8Ns2B2ZI9Kdw458BY=,iv:23vScD8GtYufCLq0q6XnqFzlufy7VoKqItJBnjwmRio=,tag:5kQGW3HGPpwBavmj+jL7pA==,type:str]
   encrypted_suffix: Templates
   version: 3.11.0
