--- a/apps/vaultwarden/base/kustomization.yaml
+++ b/apps/vaultwarden/base/kustomization.yaml
@@ -6,7 +6,6 @@ namespace: vaultwarden
 
 resources:
   - resources/certificate.yaml
-  - resources/deployment.yaml
   - resources/ingress.yaml
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
@@ -14,7 +13,7 @@ resources:
   - resources/rolebinding.yaml
   - resources/service.yaml
   - resources/serviceaccount.yaml
-  - resources/serverstransport.yaml
+  - resources/statefulset.yaml
 
 configMapGenerator:
   - name: vaultwarden
