--- a/apps/vaultwarden/overlays/tombstone/kustomization.yaml
+++ b/apps/vaultwarden/overlays/tombstone/kustomization.yaml
@@ -22,7 +22,6 @@ patches:
           cert-manager.io/cluster-issuer: ownca
           traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
           traefik.ingress.kubernetes.io/service.serversscheme: https
-          traefik.ingress.kubernetes.io/service.serverstransport: vaultwarden-vaultwarden@kubernetescrd
       - op: add
         path: /spec/rules/0/host
         value: passwords.home.arpa
@@ -42,4 +41,4 @@ patches:
         path: /spec/template/spec/containers/0/securityContext/runAsUser
         value: 989
     target:
-      kind: Deployment
+      kind: StatefulSet
