--- a/apps/gitea/base/resources/service.yaml
+++ b/apps/gitea/base/resources/service.yaml
@@ -7,7 +7,6 @@ metadata:
     app.kubernetes.io/name: gitea
   name: gitea-http
 spec:
-  clusterIP: None
   ports:
     - name: http
       port: 3000
@@ -20,6 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app.kubernetes.io/instance: gitea
     app.kubernetes.io/name: gitea-valkey
   name: gitea-valkey
 spec:
@@ -29,3 +29,21 @@ spec:
   selector:
     app.kubernetes.io/instance: gitea
     app.kubernetes.io/name: gitea-valkey
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: gitea
+    app.kubernetes.io/name: gitea-valkey-headless
+  name: gitea-valkey-headless
+spec:
+  clusterIP: None
+  ports:
+    - name: valkey
+      port: 6379
+  selector:
+    app.kubernetes.io/instance: gitea
+    app.kubernetes.io/name: gitea-valkey
+  type: ClusterIP
