--- a/apps/vaultwarden/base/resources/statefulset.yaml
+++ b/apps/vaultwarden/base/resources/statefulset.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     secret.reloader.stakater.com/reload: vaultwarden,vaultwarden-tls
@@ -17,8 +17,7 @@ spec:
       app.kubernetes.io/component: vaultwarden
       app.kubernetes.io/instance: vaultwarden
       app.kubernetes.io/name: vaultwarden
-  strategy:
-    type: Recreate
+  serviceName: vaultwarden-headless
   template:
     metadata:
       labels:
