--- a/apps/immich/base/resources/deployment.yaml
+++ b/apps/immich/base/resources/deployment.yaml
@@ -210,7 +210,7 @@ spec:
               value: http://immich-machine-learning:3003
             - name: REDIS_HOSTNAME
               value: immich-valkey
-          image: docker.io/valkey/valkey:9.0.2
+          image: ghcr.io/valkey-io/valkey:9.0.2
           imagePullPolicy: IfNotPresent
           livenessProbe:
             exec:
