--- a/apps/nextcloud/base/kustomization.yaml
+++ b/apps/nextcloud/base/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
-  - resources/statefulset-postgres.yaml
+  - resources/sopssecret.yaml
   - resources/statefulset.yaml
