--- a/apps/nextcloud/base/resources/statefulset.yaml
+++ b/apps/nextcloud/base/resources/statefulset.yaml
@@ -116,6 +116,8 @@ spec:
             - mountPath: /var/www/tmp
               name: nextcloud-main
               subPath: tmp
+      imagePullSecrets:
+        - name: docker-hub
       securityContext:
         # Will mount configuration files as www-data (id: 33) for nextcloud
         fsGroup: 33
@@ -153,7 +155,7 @@ spec:
         - args:
             - --appendonly
             - !!str yes
-          image: valkey/valkey:9.0.2
+          image: ghcr.io/valkey-io/valkey:9.0.2
           name: valkey
           ports:
             - containerPort: 6379
@@ -183,3 +185,91 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: nextcloud-valkey-data
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  labels:
+    app.kubernetes.io/component: postgres
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-postgres
+  name: nextcloud-postgres
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: postgres
+      app.kubernetes.io/instance: nextcloud
+      app.kubernetes.io/name: nextcloud-postgres
+  serviceName: nextcloud-postgres-headless
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: postgres
+        app.kubernetes.io/instance: nextcloud
+        app.kubernetes.io/name: nextcloud-postgres
+    spec:
+      containers:
+        - env:
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
+            - name: POSTGRES_DB
+              value: nextcloud
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: postgres-password
+                  name: nextcloud-postgres
+            - name: POSTGRES_USER
+              value: nextcloud
+          image: docker.io/library/postgres:17
+          livenessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - nextcloud
+            failureThreshold: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          name: postgres
+          ports:
+            - containerPort: 5432
+              name: postgres
+              protocol: TCP
+          readinessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - nextcloud
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp
+            - mountPath: /var/run/postgresql
+              name: run
+            - mountPath: /var/lib/postgresql/data
+              name: data
+      imagePullSecrets:
+        - name: docker-hub
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
+      volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: nextcloud-data
+        - emptyDir: {}
+          name: run
+        - emptyDir: {}
+          name: tmp
