--- a/apps/redirector/base/kustomization.yaml
+++ b/apps/redirector/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - resources/ingress.yaml
   - resources/namespace.yaml
   - resources/service.yaml
+  - resources/sopssecret.yaml
 
 configMapGenerator:
   - files:
