--- a/apps/vaultwarden/base/resources/statefulset.yaml
+++ b/apps/vaultwarden/base/resources/statefulset.yaml
@@ -31,7 +31,7 @@ spec:
                 name: vaultwarden
             - secretRef:
                 name: vaultwarden
-          image: docker.io/vaultwarden/server:1.34.3-alpine
+          image: ghcr.io/dani-garcia/vaultwarden:1.34.3-alpine
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 10
